# libBMPTransByOpenCV

./: .gitignore  README.md
BMPTransByOpenCV/: BMPTransByOpenCV.cpp  BMPTransByOpenCV.h  CMakeLists.txt  readme.txt
test/: Makefile  testlibBMPTrans  testlibBMPTrans.cpp
test/libopencv_2.4.13.6/: libopencv_core.so.2.4.13  libopencv_highgui.so.2.4.13  libopencv_imgproc.so.2.4.13
